examples/test/testpolicy7236.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7236
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key34: value30
      key41: value29
      key36: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value1
          key20: value2
      podSelector:
        matchLabels:
          key47: value11
